final code demo commits

--- a/day-28/cfgram-auth/app/view/home/home.html
+++ b/day-28/cfgram-auth/app/view/home/home.html
@@ -1,16 +1,22 @@
 <!-- step 51 -->
 <section class="home">
   <h2>{{ homeCtrl.title }}</h2>
+  
+  <!-- step 109 -->
+  <input ng-model="homeCtrl.gallerySearchTerm" type="text" placeholder="search">
 
   <!-- step 66 -->
   <create-gallery></create-gallery>
+
+
   <div class="clearfix"></div>
+
   <!-- step 94 -->
   <div class="gallery-item-container">
 
     <ul>
       <!-- step 79 -->
-      <gallery-item ng-repeat="item in homeCtrl.galleries" gallery="item" delete-done="homeCtrl.galleryDeleteDone(galleryData)">
+      <gallery-item ng-repeat="item in homeCtrl.galleries | gallerySearch: homeCtrl.gallerySearchTerm" gallery="item" delete-done="homeCtrl.galleryDeleteDone(galleryData)">
 
 
       </gallery-item>
